[package]
name = "ztop"
version = "0.1.1"
edition = "2018"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/asomers/ztop"
description = "Display ZFS datasets' I/O in real time"
categories = ["command-line-utilities"]
keywords = ["zfs"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
cfg-if = "1.0"
humanize-rs = "0.1.5"
ieee754 = "0.2.5"
nix = "0.23.0"
structopt = "0.3.22"
sysctl = "0.4.2"
termion = "1.5"
tui = { version = "0.15.0", features = ["termion"] }

[dependencies.regex]
version = "1"
# Disable the unicode feature, since dataset names are always ASCII
features = [ "perf", "std" ]
