[package]
name = "ztop"
version = "0.2.2"
edition = "2021"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/asomers/ztop"
description = "Display ZFS datasets' I/O in real time"
categories = ["command-line-utilities"]
keywords = ["zfs"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
cfg-if = "1.0"
clap = { version = "3.0", features = ["derive"] }
humanize-rs = "0.1.5"
nix = { version = "0.26.0", default-features = false, features = ["poll", "time"] }
sysctl = "0.4.2"
termion = "2.0"
ratatui = { version = "0.23.0", default-features = false, features = ["termion"] }

[target.'cfg(target_os = "linux")'.dependencies]
glob = "0.3"

[dependencies.regex]
version = "1"
# Disable the unicode feature, since dataset names are always ASCII
features = [ "perf", "std" ]
