[package]
name = "ztop"
version = "0.2.3"
edition = "2021"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/asomers/ztop"
description = "Display ZFS datasets' I/O in real time"
categories = ["command-line-utilities"]
keywords = ["zfs"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
cfg-if = "1.0"
clap = { version = "4.4", features = ["derive"] }
humanize-rs = "0.1.5"
nix = { version = "0.27.0", default-features = false, features = ["time"] }
sysctl = "0.5.0"
crossterm = { version = "0.27.0", default-features = false , features = ["events"]}
ratatui = { version = "0.25.0", default-features = false, features = ["crossterm", "unstable"] }

[target.'cfg(target_os = "linux")'.dependencies]
glob = "0.3"

[dependencies.regex]
version = "1.3"
default-features = false
# Disable the unicode feature, since dataset names are always ASCII
features = [ "perf", "std" ]
